--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,28 @@
 /*  your css code here. If applicable */
 .main-container{
 	Background-color: #f5f5f5;
-	height:200px;
+	height:250px;
 	width:600px;
+}
+h1{
+	padding-top:30px;
+	padding-left:20px;
+}
+.testimonial{
+	height:40px;
+	width:500px;
+	background-color:white;
+	margin-left:20px;
+	font-size:10px;
+	padding:8px;
+	margin:10px;
+	
+}
+.author{
+	text-align:right;
+	font-style:italic;
+	
+}
+.testimonial-text{
+	font-size:10px;
 }
